# j-law-core

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  clippy.toml  docker-compose.yml
.claude/: settings.json
.claude/agents/: architect.md  implementer.md  reviewer.md
.claude/hooks/: session-start.sh
.github/: CODEOWNERS  SECURITY.md
.github/workflows/: ci.yml  publish-go.yml  publish-java.yml  publish-npm.yml  publish-python.yml  publish-ruby.yml  release.yml
crates/j-law-c-ffi/: Cargo.toml  j_law_c_ffi.h
crates/j-law-c-ffi/src/: lib.rs
crates/j-law-cgo/: Cargo.toml  j_law_cgo.h
crates/j-law-cgo/src/: lib.rs
crates/j-law-core/: Cargo.toml
crates/j-law-core/src/: error.rs  lib.rs
crates/j-law-core/src/domains/: mod.rs
crates/j-law-core/src/domains/consumption_tax/: calculator.rs  context.rs  mod.rs  params.rs  policy.rs
crates/j-law-core/src/domains/income_tax/: assessment.rs  calculator.rs  context.rs  mod.rs  params.rs  policy.rs
crates/j-law-core/src/domains/income_tax/deduction/: calculator.rs  context.rs  expense.rs  mod.rs  params.rs  personal.rs  types.rs
crates/j-law-core/src/domains/real_estate/: calculator.rs  context.rs  mod.rs  params.rs  policy.rs
crates/j-law-core/src/domains/social_insurance/: calculator.rs  context.rs  mod.rs  params.rs  policy.rs
crates/j-law-core/src/domains/stamp_tax/: calculator.rs  context.rs  mod.rs  params.rs  policy.rs
crates/j-law-core/src/domains/withholding_tax/: calculator.rs  context.rs  mod.rs  params.rs  policy.rs
crates/j-law-core/src/types/: amount.rs  citation.rs  date.rs  mod.rs  rate.rs  rounding.rs
crates/j-law-core/tests/: consumption_tax.rs  income_tax.rs  real_estate.rs  social_insurance.rs  stamp_tax.rs  withholding_tax.rs
crates/j-law-core/tests/consumption_tax/: calculation_examples.rs
crates/j-law-core/tests/income_tax/: calculation_examples.rs  deductions_basic_examples.rs  deductions_edge_cases.rs  edge_cases.rs  full_pipeline_examples.rs  registry_examples.rs
crates/j-law-core/tests/real_estate/: edge_cases.rs  low_cost_special_2018.rs  mlitt_examples.rs  pre2018_basic.rs
crates/j-law-core/tests/social_insurance/: calculation_examples.rs  edge_cases.rs
crates/j-law-core/tests/stamp_tax/: calculation_examples.rs  edge_cases.rs  fixtures.rs
crates/j-law-core/tests/withholding_tax/: calculation_examples.rs  edge_cases.rs
crates/j-law-ffi/: Cargo.toml  j_law_ffi.h
crates/j-law-ffi/src/: lib.rs
crates/j-law-go/: Makefile  README.md  go.mod  j_law_core.go  j_law_core_internal_test.go  j_law_core_test.go  j_law_income_tax_deductions_test.go  j_law_social_insurance_test.go  unsupported_platform.go
crates/j-law-go/native/darwin_amd64/: build-info.txt
crates/j-law-go/native/darwin_arm64/: build-info.txt
crates/j-law-go/native/linux_amd64/: build-info.txt
crates/j-law-go/native/linux_arm64/: build-info.txt
crates/j-law-java/: README.md  build.gradle  settings.gradle
crates/j-law-java/src/main/c/: jlaw_jni.c
crates/j-law-java/src/main/java/io/github/kmoyashi/jlaw/: BreakdownStep.java  BrokerageFeeResult.java  ConsumptionTax.java  ConsumptionTaxResult.java  DependentDeductionInput.java  IncomeDeductionLine.java  (+19 more)
crates/j-law-python/: Cargo.toml  MANIFEST.in  README.md  pyproject.toml  setup.py
crates/j-law-python/j_law_python/: __init__.py  _c_ffi.py  _cgo.py  build_support.py  consumption_tax.py  income_tax.py  real_estate.py  social_insurance.py  stamp_tax.py  withholding_tax.py
crates/j-law-python/src/: lib.rs
crates/j-law-python/tests/: conftest.py  test_c_ffi.py  test_cgo.py  test_consumption_tax.py  test_income_tax.py  test_income_tax_deductions.py  test_real_estate.py  test_social_insurance.py  test_stamp_tax.py  test_withholding_tax.py
crates/j-law-registry/: Cargo.toml
crates/j-law-registry/data/consumption_tax/: consumption_tax.json
crates/j-law-registry/data/income_tax/: deductions.json  income_tax.json
crates/j-law-registry/data/real_estate/: brokerage_fee.json
crates/j-law-registry/data/social_insurance/: social_insurance.json
crates/j-law-registry/data/stamp_tax/: stamp_tax.json
crates/j-law-registry/data/withholding_tax/: withholding_tax.json
crates/j-law-registry/src/: consumption_tax_loader.rs  consumption_tax_schema.rs  history_validator.rs  income_tax_deduction_loader.rs  income_tax_deduction_schema.rs  income_tax_loader.rs  income_tax_schema.rs  lib.rs  loader.rs  schema.rs  social_insurance_loader.rs  social_insurance_schema.rs  stamp_tax_loader.rs  stamp_tax_schema.rs  validator.rs  withholding_tax_loader.rs  withholding_tax_schema.rs
crates/j-law-ruby/: Gemfile  README.md  Rakefile  j_law_core.gemspec  j_law_ruby.gemspec
crates/j-law-ruby/ext/j_law_core/: Cargo.toml  extconf.rb
crates/j-law-ruby/ext/j_law_core/src/: lib.rs
crates/j-law-ruby/ext/j_law_ruby/: Cargo.toml  extconf.rb
crates/j-law-ruby/ext/j_law_ruby/src/: lib.rs
crates/j-law-ruby/lib/: j_law_core.rb  j_law_ruby.rb
crates/j-law-ruby/lib/j_law_ruby/: build_support.rb  c_ffi.rb  cgo.rb  ffi.rb  j_law_uniffi.rb
crates/j-law-ruby/rake_support/: vendor_rust.rb
crates/j-law-ruby/test/: test_c_ffi_adapter.rb  test_cgo_adapter.rb  test_consumption_tax.rb  test_ffi_adapter.rb  test_gemspec.rb  test_income_tax.rb  test_income_tax_deductions.rb  test_real_estate.rb  test_social_insurance.rb  test_stamp_tax.rb  test_withholding_tax.rb
crates/j-law-uniffi/: Cargo.toml  build.rs  pyproject.toml
crates/j-law-uniffi/src/: j_law_uniffi.udl  lib.rs
crates/j-law-wasm/: Cargo.toml  README.md
crates/j-law-wasm/src/: lib.rs
crates/j-law-wasm/tests/: consumption_tax.test.mjs  income_tax.test.mjs  real_estate.test.mjs  social_insurance.test.mjs  stamp_tax.test.mjs  withholding_tax.test.mjs
docs/: project-status.md  usage.md
scripts/: bump_version.sh  sync_go_native_archive.sh  verify_release_versions.sh
tests/fixtures/: consumption_tax.json  income_tax.json  income_tax_deductions.json  real_estate.json  social_insurance.json  stamp_tax.json  withholding_tax.json
(+11 files in other folders)
