[workspace]
members = [
    "crates/j-law-core",
    "crates/j-law-registry",
    "crates/j-law-python",
    "crates/j-law-wasm",
    "crates/j-law-ruby/ext/j_law_core",
    "crates/j-law-cgo",
]
resolver = "2"

[workspace.lints.clippy]
# clippy.toml で定義された禁止ルールを有効化
# - disallowed-methods: unwrap/expect
# - disallowed-types: f64/f32
# - disallowed-macros: panic!/todo!/unimplemented!
disallowed_methods = "warn"
disallowed_types = "warn"
disallowed_macros = "warn"
