[package]
name = "j-law-c-ffi"
version = "0.0.1"
edition = "2021"
license = "MIT"

[lints]
workspace = true

[lib]
name = "j_law_c_ffi"
# staticlib: C 互換言語から静的リンクできる配布物 (.a)
# cdylib:    動的リンク用 (.so / .dylib)
crate-type = ["staticlib", "cdylib"]

[dependencies]
j-law-core     = { path = "../j-law-core" }
j-law-registry = { path = "../j-law-registry" }
