[package]
name = "j-law-core"
version = "0.0.1"
edition = "2021"
rust-version = "1.94"
license = "MIT"
publish = false

[lints]
workspace = true

[dependencies]
thiserror = "1"

[dev-dependencies]
j-law-registry = { path = "../j-law-registry" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
