[package]
name = "j-law-python"
version = "0.0.1"
edition = "2021"
license = "MIT"

[lints]
workspace = true

[lib]
name = "j_law_core"
crate-type = ["cdylib"]

[dependencies]
j-law-core = { path = "../j-law-core" }
j-law-registry = { path = "../j-law-registry" }
pyo3 = { version = "0.28.2", features = ["extension-module"] }
