[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "j-law-python"
version = "0.0.1"
description = "日本の法令が定める各種計算を法的正確性を保証して実装するライブラリ（宅建業法・所得税法・印紙税法）"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
keywords = ["japan", "law", "tax", "real-estate", "calculation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Office/Business :: Financial",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
# j_law_uniffi は j-law-uniffi クレートから maturin でビルドしてインストール済みであることを前提とする
dependencies = ["j-law-uniffi"]

[project.urls]
Homepage = "https://github.com/kmoyashi/j-law-core"
Repository = "https://github.com/kmoyashi/j-law-core"
"Bug Tracker" = "https://github.com/kmoyashi/j-law-core/issues"

[project.optional-dependencies]
test = ["pytest"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["."]
include = ["j_law_python*"]
