[build-system]
requires = ["setuptools>=68", "wheel>=0.42"]
build-backend = "setuptools.build_meta"

[project]
name = "j-law-python"
version = "0.0.6"
description = "日本法令計算の PoC を Python から利用するためのアルファ版バインディング"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["japan", "law", "tax", "real-estate", "calculation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Office/Business :: Financial",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/kmoyashi/j-law-core"
Repository = "https://github.com/kmoyashi/j-law-core"
"Bug Tracker" = "https://github.com/kmoyashi/j-law-core/issues"

[project.optional-dependencies]
test = ["pytest"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["j_law_python*"]
