[package]
name = "j-law-wasm"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lints.clippy]
# WASMバインディング層では、wasm_bindgenマクロ展開時のpanic!使用とJavaScriptへのf64返却が必要
disallowed_macros = "allow"
disallowed_types = "allow"
# unwrap/expectは引き続き禁止
disallowed_methods = "warn"

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
j-law-core = { path = "../j-law-core" }
j-law-registry = { path = "../j-law-registry" }
