[package]
name = "j-law-wasm"
version = "0.0.1"
edition = "2021"
license = "MIT"
description = "日本の法令が定める各種計算を法的正確性を保証して実装するライブラリ（WebAssembly）"
repository = "https://github.com/j-law-core/j-law-core"
homepage = "https://github.com/j-law-core/j-law-core"
keywords = ["wasm", "japan", "law", "tax", "real-estate"]

[lints.clippy]
# WASMバインディング層では、wasm_bindgenマクロ展開時のpanic!使用とJavaScriptへのf64返却が必要
disallowed_macros = "allow"
disallowed_types = "allow"
# unwrap/expectは引き続き禁止
disallowed_methods = "warn"

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
j-law-core = { path = "../j-law-core" }
j-law-registry = { path = "../j-law-registry" }
