[package]
name = "j-law-wasm"
version = "0.0.5"
edition = "2021"
rust-version = "1.94"
license = "MIT"
publish = false
description = "日本法令計算の PoC を JavaScript から利用するためのアルファ版 WebAssembly バインディング"
repository = "https://github.com/kmoyashi/j-law-core"
homepage = "https://github.com/kmoyashi/j-law-core"
keywords = ["wasm", "japan", "law", "tax", "real-estate"]

[lints.clippy]
# WASMバインディング層では、wasm_bindgenマクロ展開時のpanic!使用とJavaScriptへのf64返却が必要
disallowed_macros = "allow"
disallowed_types = "allow"
# unwrap/expectは引き続き禁止
disallowed_methods = "warn"

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.release]
# wasm-opt のインストールを省略するため false に設定。
# wasm-opt はビルド時間の短縮・バイナリサイズ削減に有効だが、
# Dockerテスト環境での別途インストールが必要になるため無効化している。
wasm-opt = false

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
j-law-core = { path = "../j-law-core" }
j-law-registry = { path = "../j-law-registry" }
