[package]
name = "j_law_ruby"
version = "0.0.1"
edition = "2021"
license = "MIT"

[lints.clippy]
# Rubyバインディング層では、magnusマクロ展開時のunwrap()使用が必要
disallowed_methods = "allow"
# f64/panic!は引き続き禁止
disallowed_types = "warn"
disallowed_macros = "warn"

[lib]
name = "j_law_ruby"
crate-type = ["cdylib"]

[dependencies]
magnus = { version = "0.7" }
j-law-core = { path = "../../../j-law-core" }
j-law-registry = { path = "../../../j-law-registry" }
